# skellington

./: .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
skeltal/: __init__.py  bot.py  cli.py  events.py
skeltal/protocol/: clientbound.py  connection.py  handlers.py  message.py  queue.py  serverbound.py  state.py  types.py
tests/: test_types.py
